src/test/resources/cocos/invalid/imports/elementNameAlreadyExists2/Import Vehicle.sysml
package 'Import Vehicle'{
  import 'Symbol Definition'::*;
  block AlreadyInScope;
}